input fields added

--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -78,9 +78,13 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-12">
-                                    <h3>86%</h3>
-                                    <h6 class="card-subtitle">Lånebeløp</h6>
-                                </div>
+                                    <div class="form-group">
+                                        <label>Lånebeløp</label>
+                                        <div class="input-icon input-icon-right">
+                                                <input type="text" class="form-control" placeholder="2000000">
+                                                <i>kr</i>
+                                              </div>                                    </div>
+                                  </div>
                                 <div class="col-12">
                                     <div class="progress">
                                         <div class="progress-bar bg-success" role="progressbar"
@@ -97,9 +101,13 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-12">
-                                    <h3>40%</h3>
-                                    <h6 class="card-subtitle">Nedbetalingstid</h6>
-                                </div>
+                                    <div class="form-group">
+                                        <label>Nedbetalingstid</label>
+                                        <div class="input-icon input-icon-right">
+                                                <input type="text" class="form-control" placeholder="20">
+                                                <i>år</i>
+                                              </div>                                    </div>
+                                 </div>
                                 <div class="col-12">
                                     <div class="progress">
                                         <div class="progress-bar bg-info" role="progressbar"
@@ -116,8 +124,13 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-12">
-                                    <h3>56%</h3>
-                                    <h6 class="card-subtitle">Nominell Rente</h6>
+                                    <div class="form-group">
+                                        <label>Nominell rente</label>
+                                         <div class="input-icon input-icon-right">
+                                            <input type="text" class="form-control" placeholder="0.00">
+                                            <i>%</i>
+                                          </div>
+                                    </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="progress">
