--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
-    <title>Material Pro Admin Template - Bootstrap 4 Admin Template</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://stacc.com/favicon-96x96.png">
+    <title>Stacc Teknisk Besvarelse</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/materialpro/" />
     <!-- Bootstrap Core CSS -->
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -50,22 +50,18 @@
                 <!-- ============================================================== -->
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">
-                        <!-- Logo icon -->
-                        <b>
-                            <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-                            <!-- Dark Logo icon -->
-                            <img src="../assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
-                            <!-- Light Logo icon -->
-                            <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                         <b>
+                             <!-- Dark Logo icon -->
+                             <!-- Light Logo icon -->
+                            <img src="https://cdn.sanity.io/images/8j24leyc/production/ec6d45591df4f7a78906974042a85763da3784f0-312x312.png" style="width:80px;" alt="homepage" class="light-logo" />
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
                         <span>
                             <!-- dark Logo text -->
-                            <img src="../assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-                            <!-- Light Logo text -->
-                            <img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span>
-                    </a>
+                             <!-- Light Logo text -->
+                             <h3 style="display: inline-block;">Teknisk besvarelse</h3>
+                      </a>
                 </div>
             </nav>
         </header>
@@ -81,7 +77,7 @@
                                     <div class="form-group">
                                         <label>Lånebeløp</label>
                                         <div class="input-icon input-icon-right">
-                                                <input type="text" class="form-control" placeholder="2000000">
+                                                <input id="input_lanebelop" type="text" class="form-control" value="2000000">
                                                 <i>kr</i>
                                               </div>                                    </div>
                                   </div>
@@ -104,7 +100,7 @@
                                     <div class="form-group">
                                         <label>Nedbetalingstid</label>
                                         <div class="input-icon input-icon-right">
-                                                <input type="text" class="form-control" placeholder="20">
+                                                <input id="input_nedbetalingstid" type="text" class="form-control" value="20">
                                                 <i>år</i>
                                               </div>                                    </div>
                                  </div>
@@ -127,7 +123,7 @@
                                     <div class="form-group">
                                         <label>Nominell rente</label>
                                          <div class="input-icon input-icon-right">
-                                            <input type="text" class="form-control" placeholder="0.00">
+                                            <input id="input_rente" type="text" class="form-control" value="3.00">
                                             <i>%</i>
                                           </div>
                                     </div>
@@ -148,15 +144,11 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-12">
-                                    <h3>26%</h3>
-                                    <h6 class="card-subtitle">Product B</h6>
-                                </div>
+                                    <label>Månedlig beløp</label>
+                                     <h2>6221,-</h2>
+                                 </div>
                                 <div class="col-12">
-                                    <div class="progress">
-                                        <div class="progress-bar bg-inverse" role="progressbar"
-                                            style="width: 26%; height: 6px;" aria-valuenow="25" aria-valuemin="0"
-                                            aria-valuemax="100"></div>
-                                    </div>
+                                        <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-outline-info">Søk lån</button>
                                 </div>
                             </div>
                         </div>
@@ -344,14 +336,7 @@
                         <!-- Column -->
 
                     </div>
-                    <!-- Row -->
-                    <!-- ============================================================== -->
-                    <!-- End PAge Content -->
-                    <!-- ============================================================== -->
-                    <!-- ============================================================== -->
-                    <!-- Right sidebar -->
-                    <!-- ============================================================== -->
-                    <!-- .right-sidebar -->
+                    
                     <div class="right-sidebar">
                         <div class="slimscrollright">
                             <div class="rpanel-title"> Service Panel <span><i
@@ -439,7 +424,7 @@
 
             </div>
 
-
+ 
             <script src="../assets/plugins/jquery/jquery.min.js"></script>
             <!-- Bootstrap tether Core JavaScript -->
             <script src="../assets/plugins/popper/popper.min.js"></script>
@@ -473,6 +458,9 @@
             <!-- Style switcher -->
             <!-- ============================================================== -->
             <script src="../assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+
+            <script src="index _stacc.js"></script>
+ 
  
 
 </body>
