--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -141,18 +141,40 @@
                     <!-- Column -->
                     <!-- Column -->
                     <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-12">
-                                    <label>Månedlig beløp</label>
-                                     <h2>6221,-</h2>
-                                 </div>
-                                <div class="col-12">
-                                        <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-outline-info">Søk lån</button>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label>Avdragsfrihet</label>
+                                             <div class="input-icon input-icon-right">
+                                                <input id="input_avdragsfrihet" type="text" class="form-control" value="0">
+                                                <i>år</i>
+                                              </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="progress">
+                                            <div class="progress-bar bg-danger" role="progressbar"
+                                                style="width: 56%; height: 6px;" aria-valuenow="25" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <label>Månedlig beløp</label>
+                                         <h2>6221,-</h2>
+                                     </div>
+                                    <div class="col-12">
+                                            <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-outline-info">Søk lån</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                 </div>
 
 
