--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -82,7 +82,7 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-12">
-                    <div class="form-group">
+                    <div class="form-group"> 
                       <label>Lånebeløp</label>
                       <div class="input-icon input-icon-right">
                         <input id="input_lanebelop" type="text" class="form-control" value="2000000">
@@ -90,12 +90,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <div class="progress">
-                      <div class="progress-bar bg-success" role="progressbar" style="width: 85%; height: 6px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
+                 </div>
               </div>
             </div>
             <!-- Column -->
@@ -112,12 +107,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <div class="progress">
-                      <div class="progress-bar bg-info" role="progressbar" style="width: 40%; height: 6px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
+                 </div>
               </div>
             </div>
             <!-- Column -->
@@ -134,12 +124,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <div class="progress">
-                      <div class="progress-bar bg-danger" role="progressbar" style="width: 56%; height: 6px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
+                 </div>
               </div>
             </div>
             <!-- Column -->
@@ -156,39 +141,36 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-12">
-                    <input type="text" class="js-range-slider" name="my_range" value="" id="slider_avdragsfrihet"/>
-                </div>
-                </div>
+                 </div>
               </div>
             </div>
+
             <div class="card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-12">
-                    <label>Månedlig beløp</label>
-                    <div class="row">
-                      <div class="col-6">
-                        <span>Første måned</span>
-                      </div>
-                      <div class="col-6">
-                        <h2 id="belop_Forste" style="float:right">6157,-</h2>
-                      </div>
-                      <div class="col-6">
-                        <span>Deretter</span>
-                      </div>
-                      <div class="col-6">
-                        <h2 id="belop_Deretter" style="float:right">11089,-</h2>
-                      </div>
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-12">
+                          <div class="form-group">
+                            <label>Første måned</label>
+                            <h2 id="belop_Forste" style="float:right">6157,-</h2>
+                           </div>
+
+                           <div class="form-group">
+                                <label>Deretter</label>
+                                <h2 id="belop_Deretter" style="float:right">11089,-</h2>
+                                
+                               </div>
+                               
+                        </div>
+                       </div>
                     </div>
                   </div>
-                  <div class="col-12">
-                    <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-outline-info">Søk lån</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+             </div>
+
+             <div class="row" style="margin-top:15px;margin-right:15px;margin-bottom: 15px">
+                    <div class="col-12">
+                            <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-info">Søk lån</button>
+                          </div>
+             </div>
 
 
 
