--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -181,8 +181,8 @@
               <div class="card">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs profile-tab" role="tablist">
-                  <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Graph</a> </li>
-                   <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Detailed overview</a> </li>
+                  <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Oversikt</a> </li>
+                   <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Nedbetalingsplan</a> </li>
                 </ul>
 
                 <!-- Tab panes -->
