--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -191,8 +191,8 @@
                     <div class="row">
                       <div class="col-12">
                         <div class="card">
-                          <div class="chartist-chart andvios" style="height:350px;"> </div>
-                        </div>
+                                <div id="chart_downpayment" class="ct-chart" style="height:350px;"></div>
+                         </div>
                       </div>
                     </div>
                     <div class="row">
@@ -221,7 +221,7 @@
                       </div>
                       <div class="col-8">
                         <div class="card">
-                          <div class="ct-chart" style="height:350px;"></div>
+                          <div id="chart_pie" class="ct-chart" style="height:350px; padding-right: 50px"></div>
                         </div>
                       </div>
 
