--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -385,6 +385,7 @@
 
         <script src="index _stacc.js"></script>
         <script src="https://cdn.rawgit.com/adriancooney/console.image/c9e6d4fd/console.image.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
 
 
 
