--- a/Code/Code/index.html
+++ b/Code/Code/index.html
@@ -1,82 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="https://stacc.com/favicon-96x96.png">
     <title>Stacc Teknisk Besvarelse</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/materialpro/" />
-    <!-- Bootstrap Core CSS -->
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- chartist CSS -->
     <link href="../assets/plugins/chartist-js/dist/chartist.min.css" rel="stylesheet">
     <link href="../assets/plugins/chartist-js/dist/chartist-init.css" rel="stylesheet">
     <link href="../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
-    <link href="../assets/plugins/css-chart/css-chart.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
-    <!-- You can change the theme colors from here -->
     <link href="css/colors/blue.css" id="theme" rel="stylesheet">
-    <!--This page css - Morris CSS -->
-    <link href="../assets/plugins/morrisjs/morris.css" rel="stylesheet">
-
     <link href="css/styles_stacc.css" rel="stylesheet">
-
-    <!--Plugin CSS file with desired skin-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css" />
-
-
-
   </head>
-
   <body class="fix-header fix-sidebar card-no-border">
-    <!-- ============================================================== -->
-    <!-- Preloader - style you can find in spinners.css -->
-    <!-- ============================================================== -->
     <div class="preloader">
       <svg class="circular" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" /> </svg>
     </div>
-    <!-- ============================================================== -->
-    <!-- Main wrapper - style you can find in pages.scss -->
-    <!-- ============================================================== -->
     <div id="main-wrapper">
-      <!-- ============================================================== -->
-      <!-- Topbar header - style you can find in pages.scss -->
-      <!-- ============================================================== -->
       <header class="topbar">
         <nav class="navbar top-navbar navbar-expand-md navbar-light">
-          <!-- ============================================================== -->
-          <!-- Logo -->
-          <!-- ============================================================== -->
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
               <b>
-                <!-- Dark Logo icon -->
-                <!-- Light Logo icon -->
                 <img src="https://cdn.sanity.io/images/8j24leyc/production/ec6d45591df4f7a78906974042a85763da3784f0-312x312.png" style="width:80px;" alt="homepage" class="light-logo" />
               </b>
-              <!--End Logo icon -->
-              <!-- Logo text -->
               <span>
-                <!-- dark Logo text -->
-                <!-- Light Logo text -->
                 <h3 style="display: inline-block;color:white">Teknisk besvarelse</h3>
             </a>
           </div>
         </nav>
       </header>
       <div class="page-wrapper">
-
         <div class="container-fluid" style="padding-top:30px;">
-
           <div class="card-group">
             <div class="card">
               <div class="card-body">
@@ -93,8 +54,6 @@
                 </div>
               </div>
             </div>
-            <!-- Column -->
-            <!-- Column -->
             <div class="card">
               <div class="card-body">
                 <div class="row">
@@ -110,8 +69,6 @@
                 </div>
               </div>
             </div>
-            <!-- Column -->
-            <!-- Column -->
             <div class="card">
               <div class="card-body">
                 <div class="row">
@@ -127,8 +84,6 @@
                 </div>
               </div>
             </div>
-            <!-- Column -->
-            <!-- Column -->
             <div class="card">
               <div class="card-body">
                 <div class="row">
@@ -144,7 +99,6 @@
                 </div>
               </div>
             </div>
-
             <div class="card">
               <div class="card-body">
                 <div class="row">
@@ -153,69 +107,60 @@
                       <label>Første måned</label>
                       <h2 id="belop_Forste" style="float:right">6157,-</h2>
                     </div>
-
                     <div class="form-group">
                       <label>Deretter</label>
                       <h2 id="belop_Deretter" style="float:right">11089,-</h2>
-
                     </div>
-
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="row" style="margin-top:15px;margin-right:15px;margin-bottom: 15px">
             <div class="col-12">
               <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-info">Søk lån</button>
             </div>
           </div>
-
-
-
-          <!-- Row -->
           <div class="row">
-            <!-- Column -->
             <div class="col-lg-12 col-xlg-12 col-md-12">
               <div class="card">
-                <!-- Nav tabs -->
                 <ul class="nav nav-tabs profile-tab" role="tablist">
                   <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Oversikt</a> </li>
-                   <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Nedbetalingsplan</a> </li>
+                  <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#profile" role="tab">Nedbetalingsplan</a> </li>
                 </ul>
-
-                <!-- Tab panes -->
                 <div class="tab-content">
                   <div class="tab-pane active" id="home" role="tabpanel">
                     <div class="row">
                       <div class="col-12">
                         <div class="card">
-                                <div id="chart_downpayment" class="ct-chart" style="height:350px;"></div>
-                         </div>
+                          <div id="chart_downpayment" class="ct-chart" style="height:350px;"></div>
+                        </div>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-4" style="padding-left:30px">
                         <table style="height: 100%; width: 100%">
                           <tbody>
-                             <tr>
-                              <td class="align-middle">                                <h3>Lånebeløp <span style="float:right" id="sum_lanebelop"></span></h3>
+                            <tr>
+                              <td class="align-middle">
+                                <h3>Lånebeløp <span style="float:right" id="sum_lanebelop"></span></h3>
                               </td>
                             </tr>
                             <tr>
-                              <td class="align-middle">                                <h3>Gebyrer <span style="float:right" id="sum_gebyrer"></span></h3>
+                              <td class="align-middle">
+                                <h3>Gebyrer <span style="float:right" id="sum_gebyrer"></span></h3>
                               </td>
                             </tr>
                             <tr>
-                              <td class="align-middle">                                <h3>Renter <span style="float:right" id="sum_renter"></span></h3>
+                              <td class="align-middle">
+                                <h3>Renter <span style="float:right" id="sum_renter"></span></h3>
                               </td>
                             </tr>
                             <tr>
-                                    <td class="align-middle">
-                                      <h3>Sum  totale innbetalinger <span style="float:right" id="sum_totaleInnbetalinger"></span></h3>
-                                    </td>
-                                  </tr>
+                              <td class="align-middle">
+                                <h3>Sum totale innbetalinger <span style="float:right" id="sum_totaleInnbetalinger"></span></h3>
+                              </td>
+                            </tr>
                           </tbody>
                         </table>
                       </div>
@@ -224,13 +169,8 @@
                           <div id="chart_pie" class="ct-chart" style="height:350px; padding-right: 50px"></div>
                         </div>
                       </div>
-
                     </div>
                   </div>
-
-
-
-                  <!--second tab-->
                   <div class="tab-pane" id="profile" role="tabpanel">
                     <div class="card-body">
                       <table id="table_detaljertOversikt" class="display nowrap table table-hover table-striped table-bordered dataTable dtr-inline collapsed" cellspacing="0" width="100%" role="grid" aria-describedby="example23_info" style="width: 100%;">
@@ -238,23 +178,17 @@
                           <tr role="row">
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Dato</th>
-
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Innbetaling</th>
-
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Renter</th>
-
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Gebyr</th>
-
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Totalt å betale</th>
-
                             <th data-priority="1" class="sorting" tabindex="0" aria-controls="example23" rowspan="1" colspan="1" style="width: 205px;" aria-label="Position: activate to sort column ascending">
                               Restgjeld</th>
                           </tr>
-
                         </thead>
                         <tfoot>
                           <tr>
@@ -279,47 +213,14 @@
                   </div>
                 </div>
               </div>
-             </div>
             </div>
-           </div>
-
-
+          </div>
+        </div>
         <script src="../assets/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap tether Core JavaScript -->
-        <script src="../assets/plugins/popper/popper.min.js"></script>
         <script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-        <!-- slimscrollbar scrollbar JavaScript -->
-        <script src="js/jquery.slimscroll.js"></script>
-        <!--Wave Effects -->
-        <script src="js/waves.js"></script>
-        <!--Menu sidebar -->
-        <script src="js/sidebarmenu.js"></script>
-        <!--stickey kit -->
-        <script src="../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
-        <script src="../assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-        <!--Custom JavaScript -->
         <script src="js/custom.min.js"></script>
-        <!-- ============================================================== -->
-        <!-- This page plugins -->
-        <!-- ============================================================== -->
         <script src="../assets/plugins/chartist-js/dist/chartist.min.js"></script>
-        <script src="../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
-        <script src="../assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-        <!-- Chart JS -->
-        <script src="../assets/plugins/echarts/echarts-all.js"></script>
-        <!-- Flot Charts JavaScript -->
-        <script src="../assets/plugins/flot/excanvas.js"></script>
-        <script src="../assets/plugins/flot/jquery.flot.js"></script>
-        <script src="../assets/plugins/flot/jquery.flot.time.js"></script>
-        <script src="../assets/plugins/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
-        <script src="js/dashboard5.js"></script>
-      
-        <script src="../assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
         <script src="../assets/plugins/numeral/numeral.js"></script>
-          <script src="index _stacc.js"></script>
- 
-
-
+        <script src="index _stacc.js"></script>
   </body>
-
 </html>
