changed my endpoint

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                  <div class="btn-group" role="group" aria-label="Basic example">
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Dropdown button
+                          Velg endepunkt
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item" id="dropdown_stacc" href="#">Stacc endpoint</a>
-                          <a class="dropdown-item" id="dropdown_local" href="#">Localhost 5050</a>
+                          <a class="dropdown-item" id="dropdown_stacc">Stacc endpoint</a>
+                          <a class="dropdown-item" id="dropdown_local">My endpoint</a>
                          </div>
                       </div>
                   <button style="float:right" type="button" id="bnt_soklan" class="btn waves-effect waves-light btn-info">Søk lån</button>
